[package]
name = "online-library-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "uuid"] }
uuid = "1.1.2"
serde = "1.0.140"
